Update html file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <title>Wezesha</title>
  </head>
  <body>
-  <nav class="navbar">
+  <div class="navbar">
     <!-- LOGO -->
     <div class="logo">Wezesha</div>
     <!-- NAVIGATION MENU -->
