Update html file

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       </div>
     </ul>
   </nav>
-  <div id="home">
+  <article id="home">
     <h1>Welcome to <em>Wezesha</em></h1>
     <h3>Efficiency Today. Brighter Tomorrow</h3>
-  </div>  
+  </article>  
   <div id="services" >
     <div class="info-box"><img src="img.jfif" alt=""></div>
     <div class="info-box"><img src="img2.png" alt=""></div>
@@ -45,8 +45,8 @@
       Up</p>
     <button>Sign UP</button>
   </div>
-   <footer>
+   <div>
      <p><em>©wezesha</em></p>
-   </footer>
+   </div>
  </body>
 </html>
